--- a/README.Rmd
+++ b/README.Rmd
@@ -15,6 +15,8 @@ knitr::opts_chunk$set(
 # fastadi
 
 <!-- badges: start -->
+[![Lifecycle: maturing](https://img.shields.io/badge/lifecycle-maturing-blue.svg)](https://www.tidyverse.org/lifecycle/#maturing)
+[![CRAN status](https://www.r-pkg.org/badges/version/fastadi)](https://CRAN.R-project.org/package=fastadi)
 <!-- badges: end -->
 
 `fastadi` implements the `AdaptiveImpute` matrix completion algorithm of [2, 1]. `fastadi` is a self-tuning alternative to algorithms such as `SoftImpute` (implemented in the [`softImpute`](https://cran.r-project.org/package=softImpute) package), truncated SVD, maximum margin matrix factorization, and weighted regularized matrix factorization (implemented in the [`rsparse`](https://github.com/rexyai/rsparse) package). In simulations `fastadi` often outperforms `softImpute` by a small margin.
