--- a/vignettes/adaptive-impute.Rmd
+++ b/vignettes/adaptive-impute.Rmd
@@ -59,7 +59,7 @@ $\hat \lambda_i \gets \frac{1}{\hat p} \sqrt{\bl_i (\Sigma_{\hat p}) - \tilde \a
 $\hat s_i \gets \sign(\langle \hat V_i, \bv_i (M) \rangle) \sign(\langle \hat U_i, \bu_i (M) \rangle)$ for $i = 1, ..., r$ \;
 $\hat \lambda_i \gets \hat s_i \cdot \hat \lambda_i$ \;
 \Return{$\hat \lambda_i, \hat U_i, \hat V_i$ for $i = 1, ..., r$}\;
-\caption{\texttt{AdapativeInitialize}}
+\caption{\texttt{AdaptiveInitialize}}
 \end{algorithm}
 
 Here $\bu_i, \bl_i, \bv_i$ are functions that return the $i^{th}$ left singular vector, singular value, and right singular value, respectively. $\tilde \alpha$ is the data adaptive thresholding parameter. Note that it is the average of the uncalculated singular values, and is thus positive.
@@ -110,201 +110,6 @@ P_\Omega^\perp (A) &= A \odot (1 - Y)
 \end{align}
 
 These are the projecttion of a matrix $A$ onto the observed of $M$ and the unobserved elements of $M$, respectively. Similar $\Omega$ is the set of all pairs $(i, j)$ such that $M_{i, j}$ is observed. $\bl_i^2 (A)$ is a function that returns the $i^{th}$ *squared* singular value of $A$ (i.e. $\bl_i^2 (A) = \left(\bl_i (A)\right)^2$). Finally $\Vert \cdot \Vert_F$ is the Frobenius norm of a matrix.
-
-## Pre-requisites
-
-### The Matrix package
-
-If you haven't used the `Matrix` package before, we recommend reading [this introduction][matrix_intro] as well as this [2nd introduction][matrix_2nd_intro].
-
-[matrix_intro]: https://cran.r-project.org/web/packages/Matrix/vignettes/Intro2Matrix.pdf
-[matrix_2nd_intro]: https://cran.r-project.org/web/packages/Matrix/vignettes/Intro2Matrix.pdf
-
-```{r}
-library(Matrix)
-
-set.seed(17)
-
-# create a random 8 x 12 sparse matrix with 30 nonzero entries
-M <- rsparsematrix(8, 12, nnz = 30)
-M
-```
-
-
-```{r}
-summary(M)
-```
-
-TODO: different storage formats for sparse matrices. CSC, triplet, symmetric. for the most part `Matrix` does the right thing for you. The triplet form will be most important for us later on when we right out some matrix multiplications by hand.
-
-```{r}
-# note that Matrix objects are S4 classes so we access their
-# slots using the @ symbol
-class(M)
-
-M@x  # vector of values in M
-M@i  # corresponding row indices
-
-# if you want column indices you need a dgTMatrix
-M2 <- as(M, "dgTMatrix")
-M2@j  # corresponding column indices // only for dgCMatrix object
-```
-
-We will repeatedly calculate squared Frobenious norms throughout this tutorial. It's important to know that there are *many, many* ways to calculate this norm. We will almost always calculate the squared Frobenius norm of a sparse Matrix `M` via `sum(M@x^2)`. That said, these are all equivalent:
-
-```{r}
-M^2    # square each element in M elementwise, return as sparse matrix
-M@x^2  # square each element in M elementwise, return as vector of nonzeros
-
-# the second version is much faster
-bench::mark(
-  sum(M@x^2),
-  sum(M^2),
-  sum(colSums(M^2)),
-  norm(M, type = "F")^2,
-  sum(M * M),
-  iterations = 20
-)
-```
-
-The projections $P_\Omega (A)$ and $P_\Omega^\perp (A)$ where $\Omega$ indicates the observed elements of a matrix $M$ and $A$ is another matrix with the same dimensions as $M$.
-
-```{r}
-y <- as(M, "lgCMatrix")  # indicator matrix only
-all.equal(y * M, M)  # don't lose anything multiplying by indicators
-
-A <- matrix(1:(8*12), 8, 12)
-
-all.equal(dim(A), dim(M))  # appropriate to practice projections with
-
-# Omega indicates whether an entry of M was observed
-
-# P_Omega (A)
-A * y
-
-!y
-
-# P_Omega^perp (A): NOTE: this results in a *dense* matrix
-A * (1 - y)
-
-all(A * y + A * (1 - y) == A)  # can recover A from both projections together
-```
-
-crossproducts
-
-```{r}
-bench::mark(
-  crossprod(M),     # dsCMatrix -- most specialized class, want this
-  crossprod(M, M),  # dgCMatrix
-  t(M) %*% M,       # dgCMatrix
-  check = FALSE
-)
-```
-
-the `drop()` function helps us manage dimensions
-
-```{r}
-one_col <- matrix(1:4)
-one_row <- matrix(5:8, nrow = 1)
-
-drop(one_col)
-drop(one_row)
-
-c(one_col)  # same thing, less explicit. use drop to be explicit
-```
-
-diagonal of crossproduct
-
-```{r eval = FALSE}
-v_sign == colSums(svd_M$v * v_hat)
-diag(t(svd_M$v) %*% v_hat)
-diag(crossprod(svd_M$v, v_hat))
-
-bench::mark(
-  colSums(svd_M$v * v_hat),
-  crossprod(rep(1, d), svd_M$v * v_hat),
-  iterations = 50,
-  check = FALSE
-)
-
-# write a diag_crossprod helper
-```
-
-```{r}
-rhos <- matrix(1:12, ncol = 4, byrow = TRUE)
-
-bench::mark(
-  diag(crossprod(rhos)),
-  diag(t(rhos) %*% rhos),
-  colSums(rhos * rhos),
-  crossprod(rep(1, nrow(rhos)), rhos^2),
-  check = FALSE                            
-)
-
-
-rhos <- matrix(1:12, ncol = 4, byrow = TRUE)
-
-bench::mark(
-  diag(tcrossprod(rhos)),
-  diag(crossprod(t(rhos))),
-  diag(rhos %*% t(rhos)),
-  rowSums(rhos * rhos),
-  check = FALSE
-)
-```
-
-what we get from `eigen()` and `svd()`: slightly different stuff: `u`, `d` and `v` versus `values` and `vectors`
-
-NOTE: RSpectra *only* does truncated decompositions. if you want the full decomposition, you have to use base R stuff. different algos.
-
-## Brief aside in sign ambiguity
-
-yada yada yada the signs of the left and right singular vectors are not identified in SVD
-
-A more elegant solution as proposed in @bro_resolving_2007 and used in Karl's paper is to take inner products
-
-NOTE TO SELF: identifying the signs of a single SVD is a much harder task than comparing two SVDs and seeing if they are the same up to sign differences. we only need to check if they are the same up to sign differences.
-
-```{r}
-set.seed(17)
-M <- rsparsematrix(8, 12, nnz = 30) # small example, not very sparse
-
-# number of singular vectors to compute
-k <- 4
-
-s <- svd(M, k, k)
-s2 <- svds(M, k, k)
-
-# irritating: svd() always gives you all the singular values even if you 
-# only request the first K singular vectors
-s$u %*% diag(s$d[1:k]) %*% t(s$v)
-
-# based on the flip_signs function of
-# https://stats.stackexchange.com/questions/134282/relationship-between-svd-and-pca-how-to-use-svd-to-perform-pca
-equal_svds <- function(s, s2) {
-  
-  # svd() always gives you all the singular values, but we only
-  # want to compare the first k
-  k <- ncol(s$u)
-  
-  # the term sign(s$u) * sign(s2$u) performs a sign correction
-  
-  # isTRUE because output of all.equal is not a boolean, it's something
-  # weird when the inputs aren't equal. lol why
-  
-  u_ok <- isTRUE(
-    all.equal(s$u, s2$u * sign(s$u) * sign(s2$u), check.attributes = FALSE)
-  )
-  
-  v_ok <- isTRUE(
-    all.equal(s$v, s2$v * sign(s$v) * sign(s2$v), check.attributes = FALSE)
-  )
-  
-  d_ok <- isTRUE(all.equal(s$d[1:k], s2$d[1:k], check.attributes = FALSE))
-  
-  u_ok && v_ok && d_ok
-}
-```
 
 ### Linear algebra facts
 
