Delete reference code and point to original research repository instead

--- a/README.Rmd
+++ b/README.Rmd
@@ -38,15 +38,11 @@ devtools::install_github("RoheLab/fastadi")
 
 TODO
 
-## Related work
-
-- vsp
-- https://dataslingers.github.io/MoMA/
-- sparse PCA
-
 ## References
 
 1. Cho, J., Kim, D. & Rohe, K. Asymptotic Theory for Estimating the Singular Vectors and Values of a Partially-observed Low Rank Matrix with Noise. arXiv:1508.05431 [stat] (2015). http://arxiv.org/abs/1508.05431
 
 2. Cho, J., Kim, D. & Rohe, K. Intelligent Initialization and Adaptive Thresholding for Iterative Matrix Completion; Some Statistical and Algorithmic Theory for Adaptive-Impute. Journal of Computational and Graphical Statistics 1–26 (2018) doi:10.1080/10618600.2018.1518238. https://amstat.tandfonline.com/doi/abs/10.1080/10618600.2018.1518238
+
+You can find the original implementation accompanying these papers [here](https://github.com/chojuhee/hello-world).
 
