--- a/README.Rmd
+++ b/README.Rmd
@@ -12,6 +12,7 @@ knitr::opts_chunk$set(
   out.width = "100%"
 )
 ```
+
 # fastadi
 
 <!-- badges: start -->
@@ -19,7 +20,7 @@ knitr::opts_chunk$set(
 [![CRAN status](https://www.r-pkg.org/badges/version/fastadi)](https://CRAN.R-project.org/package=fastadi)
 <!-- badges: end -->
 
-`fastadi` implements the `AdaptiveImpute` matrix completion algorithm of [2, 1]. `fastadi` is a self-tuning alternative to algorithms such as `SoftImpute` (implemented in the [`softImpute`](https://cran.r-project.org/package=softImpute) package), truncated SVD, maximum margin matrix factorization, and weighted regularized matrix factorization (implemented in the [`rsparse`](https://github.com/rexyai/rsparse) package). In simulations `fastadi` often outperforms `softImpute` by a small margin.
+`fastadi` implements the `AdaptiveImpute` matrix completion algorithm. `fastadi` is a self-tuning alternative to algorithms such as `SoftImpute` (implemented in the [`softImpute`](https://cran.r-project.org/package=softImpute) package), truncated SVD, maximum margin matrix factorization, and weighted regularized matrix factorization (implemented in the [`rsparse`](https://github.com/rexyai/rsparse) package). In simulations `fastadi` often outperforms `softImpute` by a small margin.
 
 You may find `fastadi` useful if you are developing embeddings for sparsely observed data, if you are working in natural language processing, or building a recommendation system.
 
@@ -36,7 +37,17 @@ devtools::install_github("RoheLab/fastadi")
 
 ## Example usage
 
-TODO
+Here we embed users and items in the MovieLens 100K dataset.
+
+```{r}
+library(fastadi)
+
+mf <- adaptive_impute(ml100k, rank = 3L, max_iter = 5L)
+```
+
+```{r}
+mf
+```
 
 ## References
 
