--- a/vignettes/adaptive-impute.Rmd
+++ b/vignettes/adaptive-impute.Rmd
@@ -21,7 +21,7 @@ vignette: >
 ---
 
 ```{r setup, include = FALSE}
-knitr::opts_chunk$set(echo = TRUE, eval = FALSE)
+knitr::opts_chunk$set(echo = TRUE, eval = FALSE, error = TRUE)
 ```
 
 \newcommand \bv {\mathbf{v}}
