--- a/README.Rmd
+++ b/README.Rmd
@@ -16,10 +16,8 @@ knitr::opts_chunk$set(
 # fastadi
 
 <!-- badges: start -->
-[![Lifecycle: maturing](https://img.shields.io/badge/lifecycle-maturing-blue.svg)](https://www.tidyverse.org/lifecycle/#maturing)
-[![CRAN status](https://www.r-pkg.org/badges/version/fastadi)](https://CRAN.R-project.org/package=fastadi)
-[![Codecov test coverage](https://codecov.io/gh/RoheLab/fastadi/branch/master/graph/badge.svg)](https://codecov.io/gh/RoheLab/fastadi?branch=master)
-[![R build status](https://github.com/RoheLab/fastadi/workflows/R-CMD-check/badge.svg)](https://github.com/RoheLab/fastadi/actions)
+[![R-CMD-check](https://github.com/RoheLab/fastadi/workflows/R-CMD-check/badge.svg)](https://github.com/RoheLab/fastadi/actions)
+[![Codecov test coverage](https://codecov.io/gh/RoheLab/fastadi/branch/main/graph/badge.svg)](https://app.codecov.io/gh/RoheLab/fastadi?branch=main)
 <!-- badges: end -->
 
 `fastadi` implements the `AdaptiveImpute` matrix completion algorithm. `fastadi` is a self-tuning alternative to algorithms such as `SoftImpute` (implemented in the [`softImpute`](https://cran.r-project.org/package=softImpute) package), truncated SVD, maximum margin matrix factorization, and weighted regularized matrix factorization (implemented in the [`rsparse`](https://github.com/rexyai/rsparse) package). In simulations `fastadi` often outperforms `softImpute` by a small margin.
@@ -27,6 +25,12 @@ knitr::opts_chunk$set(
 You may find `fastadi` useful if you are developing embeddings for sparsely observed data, if you are working in natural language processing, or building a recommendation system.
 
 ## Installation
+
+You can install the released version from [CRAN](https://cran.r-project.org/) with:
+
+``` r
+install.packages("fastadi")
+```
 
 You can install the development version from [GitHub](https://github.com/) with:
 
@@ -53,9 +57,9 @@ Note that the vignettes are currently scratch work for reference by the develope
 
 ## References
 
-1. Cho, J., Kim, D. & Rohe, K. Asymptotic Theory for Estimating the Singular Vectors and Values of a Partially-observed Low Rank Matrix with Noise. arXiv:1508.05431 [stat] (2015). http://arxiv.org/abs/1508.05431
+1. Cho, Juhee, Donggyu Kim, and Karl Rohe. “Asymptotic Theory for Estimating the Singular Vectors and Values of a Partially-Observed Low Rank Matrix with Noise.” Statistica Sinica, 2018. https://doi.org/10.5705/ss.202016.0205.
 
-2. Cho, J., Kim, D. & Rohe, K. Intelligent Initialization and Adaptive Thresholding for Iterative Matrix Completion; Some Statistical and Algorithmic Theory for Adaptive-Impute. Journal of Computational and Graphical Statistics 1–26 (2018) doi:10.1080/10618600.2018.1518238. https://amstat.tandfonline.com/doi/abs/10.1080/10618600.2018.1518238
+2. ———. “Intelligent Initialization and Adaptive Thresholding for Iterative Matrix Completion: Some Statistical and Algorithmic Theory for Adaptive-Impute.” Journal of Computational and Graphical Statistics 28, no. 2 (April 3, 2019): 323–33. https://doi.org/10.1080/10618600.2018.1518238.
 
 You can find the original implementation accompanying these papers [here](https://github.com/chojuhee/hello-world).
 
